refactor: Adaptação dos DTOs na service